[package]
name = "choreo"
version = "0.1.0"
edition = "2021"
description = """\
  A graphical tool for planning time-optimized trajectories for autonomous \
  mobile robots in the FIRST Robotics Competition.\
  """
readme = "../README.md"
homepage = "https://github.com/SleipnirGroup/Choreo"
repository = "https://github.com/SleipnirGroup/Choreo.git"
license = "BSD-3-Clause"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "cli", "path-all", "window-set-title", "dialog-ask", "dialog-confirm", "dialog-save", "dialog-open", "fs-all", "shell-open", "devtools"] }
tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
trajoptlib = { git = "https://github.com/SleipnirGroup/TrajoptLib.git", rev = "dbc93c780e99985a5c921be7ae7e8b2f9aa86a59" }
tokio = {version = "1.32.0", features = ["macros", "rt-multi-thread", "process", "time"] }
parking_lot = "0.12.1"
serde_with = "3.3.0"
exitcode = "1.1.2"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
